Fixes some CSS for job list
* Commit messages are wrapped
* long references (like sha1) now show ellipsis

This should avoid horizontal scrolling

--- a/web/src/theme/_jobs.scss
+++ b/web/src/theme/_jobs.scss
@@ -1,3 +1,12 @@
 .multiline {
-  white-space: pre;
+  overflow-wrap: break-word;
+  white-space: pre-line;
+  width: 500px;
+}
+
+.sha1ref {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: no-wrap;
+  width: 150px;
 }
